--- a/css/style.css
+++ b/css/style.css
@@ -1,223 +1,197 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,700&display=swap') * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,700&display=swap') 
+*
+ {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; 
+}
+body{
+    font-family: 'Lato', sans-serif;
+    background-image:url("../img/quiz.jpg") ;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
 }
 
-body {
-	font-family: "Lato", sans-serif;
-	background-image: url("../img/quiz.jpg");
-	background-size: cover;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	min-height: 100vh;
+.container{
+    widows: 940px;
+    background-color: #fff;
+    box-shadow: 0 0 50px 0 rgba(0,0,0,0.2);
+    min-height: 350px;
+    padding: 80px 90px ;
+    border-radius: 10px;
+    display: flex;
+}
+.leftSide{
+    width: 50%;
+    text-align: center;
+}
+.rightSide{
+    width: 50%;
+    padding: 15px;
+}
+.leftSide img{
+    height: 150px;
+    width: 250px;
 }
 
-.container {
-	widows: 940px;
-	background-color: #fff;
-	box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.2);
-	min-height: 350px;
-	padding: 80px 90px;
-	border-radius: 10px;
-	display: flex;
+h1{
+    color: #1da3dd;
+    font-size: 20px;
+    text-align: center;
 }
-
-.leftSide {
-	width: 50%;
-	text-align: center;
-}
-
-.rightSide {
-	width: 50%;
-	padding: 15px;
-}
-
-.leftSide img {
-	height: 150px;
-	width: 250px;
+.rightSide h1{
+    color: #1da3dd;
+    font-size: 32px;
 
 }
-
-h1 {
-	color: #1da3dd;
-	font-size: 20px;
-	text-align: center;
+.rightSide h2{
+    color: #444;
+    margin: 20px auto 10px;
+    font-size: 25px;
 }
-
-.rightSide h1 {
-	color: #1da3dd;
-	font-size: 32px;
-}
-
-.rightSide h2 {
-	color: #444;
-	margin: 20px auto 10px;
-	font-size: 25px;
-}
-
 .rightSide ul {
-	color: #444;
-	font-size: 18px;
-	margin-top: 5px;
-	font-weight: 600px;
-	list-style-type: circle;
-	list-style-position: inside;
+    color: #444444;
+    font-size: 18px;
+    margin-top: 5px;
+    font-weight: 600;
+    list-style-type: circle;
+    list-style-position: inside;
 }
-
-.rightSide ul li {
-	margin-top: 5px;
+.rightSide ul li{
+    margin-top: 5px;
 }
-
 .rightSide a {
-	background-color: #1da3dd;
-	border-radius: 100px;
-	color: #fff;
-	width: 100%;
-	display: inline-block;
-	text-align: center;
-	padding: 15px 0;
-	margin-top: 25px;
-	text-decoration: none;
-	outline: none;
+    background-color: #1da3dd;
+    border-radius: 100px;
+    color: #fff;
+    width: 100%;
+    display:inline-block;
+    text-align: center;
+    padding: 15px 0px;
+    margin-top: 25px;
+    text-decoration: none;
+    outline: none;
 }
 
+/* Question Page CSS Start */
 
-/* Question page CSS Start */
+.box{
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 50px 0 rgba(0,0,0,.2);
+    min-height: 350px;
+    width: 650px;
+    padding: 50px;
 
-.box {
-	background-color: #fff;
-	border-radius: 10px;
-	box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.2);
-	min-height: 350px;
-	width: 640px;
-	padding: 50px;
+}
+.title{
+    border-bottom: 1px solid #464646;
+    color: #464646;
+    padding-bottom: 10px;
+    margin-bottom: 30px;
+    font-weight: 600;
+    font-size: 24px;
+
+
+}
+.header{
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+
+}
+.scoreBox, .timerBox{
+    border-radius: 100px;
+    padding: 10px 15px;
+    border: 1px solid #444;
+    color: #444;
+
+}
+.questionBox{
+    background-color: #594a76;
+    color: #fff;
+    border-radius: 10px;
+    padding: 10px 15px;
+
+}
+.optionBox{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 30px;
+    grid-gap: 15px;
+
+}
+.optionBox span{
+    background-color: #ccc;
+    border-radius: 10px;
+    color: #444;
+    border: 1px solid #444;
+    padding: 10px 15px;
+
+}
+.footer{
+    display: flex;
+    justify-content: space-between;
+
+}
+.footer button{
+    background-color: #1da3dd;
+    border-radius: 5px;
+    padding: 7px 15px;
+    color: unset;
+    border: 0;
+    outline: none;
+    font-size: 20px;
+
+}
+.resultBox{
+    margin-bottom: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-row-gap: 15px;
+    font-size: 20px;
+
+
 }
 
-.title {
-	border-bottom: 1px solid #464646;
-	color: #646464;
-	padding-bottom: 10px;
-	margin-bottom: 30px;
-	font-weight: 600;
-	font-size: 24px;
+.resultBox * :nth-child(odd){
+    text-align: right;
+
 }
+.resultBox span{
+    font-weight: 600;
 
-.header {
-	margin-bottom: 30px;
-	display: flex;
-	justify-content: space-between;
 }
+.buttonBox{
+    border-top: 1px solid #444;
+    padding-top: 15px;
+    text-align: center;
 
-.scoreBox,
-.timerBox {
-	border-radius: 100px;
-	padding: 10px 15px;
-	border: 1px solid #444;
-	color: #444;
 }
+.buttonBox a{
+    background-color: #1da3dd;
+    border-radius: 50px;
+    border: 0px;
+    text-decoration: none;
+    color: #fff;
+    outline: none;
+    padding: 7px 15px;
+    margin-top: 30px;
+    display: inline-block;
 
-.questionBox {
-	background-color: #594a76;
-	color: #fff;
-	border-radius: 10px;
-	padding: 10px 15px;
 }
+.optionBox span.right{
+    background-color: #00ab00;
+    border-color: #00ab00;
+    color: #fff;
 
-.optionBox {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	margin: 30px;
-	grid-gap: 15px;
 }
-
-.optionBox span {
-	background-color: #ccc;
-	border-radius: 10px;
-	color: #444;
-	border: 1px solid #444;
-	padding: 10px 15px;
-}
-
-.footer {
-	display: flex;
-	justify-content: space-between;
-}
-
-.footer button {
-	background-color: #1da3dd;
-	border-radius: 5px;
-	padding: 7px 15px;
-	color: unset;
-	border: 0;
-	outline: none;
-	font-size: 20px;
-}
-
-
-.resultBox {
-	margin-bottom: 30px;
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-row-gap: 15px;
-	font-size: 20px;
-}
-
-.resultBox *:nth-child(odd) {
-	text-align: right;
-}
-
-.resultBox span {
-	font-weight: 600;
-}
-
-.buttonBox {
-	border-top: 1px solid #444;
-	padding: 15px;
-	text-align: center;
-}
-
-.buttonBox a {
-	background-color: #1da3dd;
-	border-radius: 50px;
-	border: 0;
-	text-decoration: none;
-	color: #fff;
-	outline: none;
-	padding: 7px 15px;
-	margin-top: 30px;
-	display: inline-block;
-}
-
-.optionBox span.right {
-	background-color: #00ab00;
-	border-color: #00ab00;
-	color: #fff;
-}
-
-.optionBox span.wrong {
-	background-color: #ffab00;
-	border-color: #ffab00;
-	color: #fff;
-}
-
-/*media query start */
-@media screen and (max-width: 768px) {
-	.leftSide {
-		display: none;
-	}
-
-	.container .box {
-		width: 425px;
-	}
-
-	.rightSide {
-		width: 100%;
-	}
-
-	.optionBox {
-		grid-template-columns: 1fr;
-	}
+.optionBox span.wrong{
+    background-color: red;
+    border-color: red;
+    color: #fff;
 
 }
